objects/Credit_Note__c.object
<CustomObject>
    <fields>
        <fullName>Accounting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gutschriften</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_For_Customer__c</fullName>
        <formula>Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe (Kunde)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_For_Legal_Prot_Insurance__c</fullName>
        <formula>Amount__c - Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe (RSV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open_To_Customer__c</fullName>
        <formula>Amount_For_Customer__c - Amount_Paid_To_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe (Kunde)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open_To_Legal_Prot_Insurance__c</fullName>
        <formula>Amount_For_Legal_Prot_Insurance__c - Amount_Paid_To_Legal_Prot_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe (RSV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open__c</fullName>
        <formula>Amount__c - Credit_Note_Payment_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_To_Customer__c</fullName>
        <label>Gezahlte Summe (Kunde)</label>
        <summarizedField>Credit_Note_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Note_Payment__c.Recipient_Type__c</field>
            <operation>equals</operation>
            <value>Kunde</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Note_Payment__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_To_Legal_Prot_Insurance__c</fullName>
        <label>Gezahlte Summe (RSV)</label>
        <summarizedField>Credit_Note_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Note_Payment__c.Recipient_Type__c</field>
            <operation>equals</operation>
            <value>RSV</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Note_Payment__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <formula>Credit_Note_Payment_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gezahlte Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Total_Price__c + Total_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Belegdatum__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belegdatum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belegfeld_1__c</fullName>
        <formula>Claim__r.Opportunity__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belegfeld 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belegfeld_2__c</fullName>
        <formula>RIGHT(Claim__r.Opportunity__r.Number__c,LEN(Claim__r.Opportunity__r.Number__c)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Belegfeld 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buchungstext__c</fullName>
        <formula>Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buchungstext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CREATEDDATE_old__c</fullName>
        <label>CREATEDDATE_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Fall</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipName>Credit_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Payment_Sum__c</fullName>
        <label>Credit Note Payment Sum</label>
        <summarizedField>Credit_Note_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Credit_Note_Payment__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <formula>Claim__r.Opportunity__r.Legal_Protection_Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selbstbehalt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Due_Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Due_Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Due_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Date__c + Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fälligkeitsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gegenkonto__c</fullName>
        <formula>IF(Claim__r.Opportunity__r.Legal_Account__c = "0010Y000010COcm",Claim__r.Opportunity__r.Customer_Number_5_Digit__c,Claim__r.Opportunity__r.Customer_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gegenkonto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GutschrImpID__c</fullName>
        <externalId>true</externalId>
        <label>GutschrImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_old__c</fullName>
        <label>ID_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kennzeichen__c</fullName>
        <formula>"S"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kennzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kontonummer__c</fullName>
        <formula>IF(Claim__r.Opportunity__r.Legal_Account__c = "0010Y000010COcm","8400","84000")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kontonummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Nummer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Gutschrift_ID__c</fullName>
        <label>Old Gutschrift ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Claim__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Vehicle_Brand_Id__c</fullName>
        <formula>Claim__r.Opportunity__r.Vehicle_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Vehicle Brand Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outro__c</fullName>
        <label>Outro</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zahlungsfrist</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <formula>Claim__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aktenzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Note_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Betreff</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Claim__r.Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Vat__c</fullName>
        <label>Total Price With Vat</label>
        <summarizedField>Credit_Note_Line_Item__c.Price__c</summarizedField>
        <summaryFilterItems>
            <field>Credit_Note_Line_Item__c.Calculate_Vat__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Credit_Note_Line_Item__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Gesamthonorar</label>
        <summarizedField>Credit_Note_Line_Item__c.Price__c</summarizedField>
        <summaryForeignKey>Credit_Note_Line_Item__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <formula>Total_Price_With_Vat__c * 0.19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Umsatz__c</fullName>
        <formula>Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Umsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uploaded_To_Dropbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hochgeladen</label>
        <type>Checkbox</type>
    </fields>
    <label>Gutschrift</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gutschriften</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Opportunity_Account_Id__c</columns>
        <columns>Accounting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>